# config-debug-env

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  fix_endings.py  fix_reset.py  inference.py  make_toml.py  openenv.yaml  pyproject.toml  requirements.txt  test_validator.py  write_readme.py
server/: Dockerfile  app.py  config_debug_environment.py  env.py  environment.py  models.py  requirements.txt
server/graders/: grader_api.py  k8s_grader.py  nginx_grader.py
server/tasks/: task5_k8s.py  task7_nginx.py
